image slider respsonsiveness change and fixed a bug that was collapsing the full width nav bar

--- a/public/css/sass/roadtrip_custom.scss
+++ b/public/css/sass/roadtrip_custom.scss
@@ -196,6 +196,7 @@ $desktop-width: 1023px;
 	.nav_menu_ham {
 		width:40px;
 		height:auto;
+		cursor: pointer;
 	}
 	.collapsed_nav_link {
 		display:inline-block;
